--- a/js_frontend/debian/Dockerfile
+++ b/js_frontend/debian/Dockerfile
@@ -38,8 +38,7 @@ RUN sudo apt-get update && \
 RUN sudo sed -i 's/\/var\/www/\/projects/g'  /etc/apache2/sites-available/default && \
     sudo sed -i 's/None/All/g' /etc/apache2/sites-available/default && \
     echo "ServerName localhost" | sudo tee -a /etc/apache2/apache2.conf && \
-    sudo a2enmod rewrite && \
-    curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
+    sudo a2enmod rewrite
 
 # label is used in Servers tab to display mapped port for Apache process on 80 port in the container
 LABEL che:server:80:ref=apache2 che:server:80:protocol=http
